src/Base/main/default/objects/ERP_Order_Send_Survey_Email__e/ERP_Order_Send_Survey_Email__e.object-meta.xml
<CustomObject>
    <label>ERP Order : Send Survey Email</label>
    <pluralLabel>ERP Order : Send Survey Email</pluralLabel>
</CustomObject>