src/Base/main/default/objects/ERP_Order_Send_Survey_Email__e/fields/ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Id__c</fullName>
    <label>ERP Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>