src/Base/main/default/objects/ERP_Order_Send_Survey_Email__e/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <label>Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>