src/Base/main/default/objects/ERP_Order_Send_Survey_Email__e/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>