src/Base/main/default/objects/ERP_Order_Send_Survey_Email__e/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>